@@ -17,6 +17,7 @@ MBDyn 1.X-Devel
 		- added support for octave (Reinhard Resch)
 		- improved modal analysis output (Reinhard Resch)
 		- added basic support for NREL airfoil data format
+		- added airfoil "flip" capability
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
